--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 asgiref==3.2.5
+djangorestframework==3.11.0
+django-money==1.0
+django-phonenumber-field==4.0.0
 Django==3.0.4
+phonenumbers==8.11.5
 pytz==2019.3
 sqlparse==0.3.1
- djangorestframework==3.11.0
