--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ djangorestframework==3.11.0
 django-money==1.0
 django-phonenumber-field==4.0.0
 Django==3.0.4
+drf-yasg==1.17.1
 phonenumbers==8.11.5
 pytz==2019.3
 python-dateutil==2.8.1
