--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -25,17 +25,10 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: 3.9
-    - name: psycopg2 prerequisites
-      run: sudo apt-get install libpq-dev
-    - name: gdal prerequisites
-      run: |
-        sudo apt update
-        sudo apt-get install python3-dev
-        sudo apt install gdal-bin
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements/local.txt
+        pip install -r requirements.txt
         pip install pytest-django
     - name: Run migrations
       run: python manage.py migrate
