--- a/.github/workflows/dependabot-update.yml
+++ b/.github/workflows/dependabot-update.yml
@@ -1,12 +1,22 @@
-name: Auto Merge Dependency Updates
+name: Dependabot auto-merge
+on: pull_request_target
 
-on:
-  - pull_request_target
+permissions:
+  pull-requests: write
+  contents: write
 
 jobs:
-  run:
+  dependabot:
     runs-on: ubuntu-latest
+    if: ${{ github.actor == 'dependabot[bot]' }}
     steps:
-      - uses: tjenkinson/gh-action-auto-merge-dependency-updates@v1
+      - name: Dependabot metadata
+        id: metadata
+        uses: dependabot/fetch-metadata@v1.1.1
         with:
-          allowed-actors: dependabot-preview[bot], dependabot[bot]
+          github-token: "${{ secrets.GITHUB_TOKEN }}"
+      - name: Enable auto-merge for Dependabot PRs
+        run: gh pr merge --auto --merge "$PR_URL"
+        env:
+          PR_URL: ${{github.event.pull_request.html_url}}
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
