--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -37,7 +37,7 @@ jobs:
   dependabot:
     needs: [build]
     runs-on: ubuntu-latest
-    if: ${{ github.actor == 'dependabot' }}
+    if: ${{ github.actor == 'dependabot[bot]' }}
     steps:
       - name: Dependabot metadata
         id: metadata
