--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -1,7 +1,11 @@
 name: Python application
 
-on: [push]
+on: [pull_request_target]
 
+permissions:
+  pull-requests: write
+  contents: write
+  
 jobs:
   build:
     runs-on: ubuntu-latest
