--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -33,11 +33,30 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install pytest-django
     - name: Run migrations
       run: python manage.py migrate
     - name: Run tests
-      run: python manage.py test
+      run: pytest . --cov . --cov-report html --cov-report xml --cov-report term
+    - name: Upload HTML coverage report
+      uses: actions/upload-artifact@v2
+      with:
+        name: coverage
+        path: htmlcov
+    - name: Code Coverage Summary Report
+      uses: irongut/CodeCoverageSummary@v1.0.2
+      # uses: joshjohanning/CodeCoverageSummary@v1.0.2
+      with:
+        filename: coverage.xml
+        badge: true
+        format: 'markdown'
+        output: 'both'
+    - name: Add Coverage PR Comment
+      uses: marocchino/sticky-pull-request-comment@v2
+      if: github.event_name == 'pull_request'
+      with:
+        recreate: true
+        path: code-coverage-results.md
+
   dependabot:
     needs: [build]
     runs-on: ubuntu-latest
