--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,7 @@ phonenumbers==8.12.38
 pytz==2021.3
 python-dateutil==2.8.2
 sqlparse==0.4.2
+pytest==7.0.1
+pytest-cov==3.0.0
+pytest-django==4.5.2
+pytest-sugar==0.9.4
