--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -52,6 +52,15 @@ jobs:
       with:
         name: coverage
         path: htmlcov
+    - name: Upload coverage report to codecov
+      uses: codecov/codecov-action@v2
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
+        files: ./coverage1.xml,./coverage2.xml # optional
+        flags: unittests # optional
+        name: codecov-umbrella # optional
+        fail_ci_if_error: true # optional (default = false)
+        verbose: true # optional (default = false)
     - name: Code Coverage Summary Report
       uses: irongut/CodeCoverageSummary@v1.0.2
       # uses: joshjohanning/CodeCoverageSummary@v1.0.2
