--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -43,8 +43,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Run migrations
+    - name: Run migrations  
       run: python manage.py migrate
+    - name: Run static checks  
+      run: pre-commit run --all-file
     - name: Run tests
       run: pytest . --cov . --cov-report html --cov-report xml --cov-report term
     - name: Upload HTML coverage report
