--- a/requirements.txt
+++ b/requirements.txt
@@ -7,13 +7,13 @@ phonenumbers==8.12.44
 pytz==2021.3
 python-dateutil==2.8.2
 sqlparse==0.4.2
-pytest==7.0.0
+pytest==7.0.1
 pytest-cov==3.0.0
 pytest-django==4.5.2
 pytest-sugar==0.9.4
 pre-commit==2.17.0
 mypy==0.931
 pyannotate==1.2.0
-pytest-annotate==1.0.4
+pytest-annotate
 django-stubs==1.9.0
 types_python_dateutil==2.8.9
