--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ djangorestframework==3.14.0
 django-money==3.0.0
 django-phonenumber-field==7.0.0
 Django==4.1.1
-drf-yasg2==1.19.4
+drf-yasg==1.21.4
 phonenumbers==8.12.56
 pytz==2022.2.1
 python-dateutil==2.8.2
