--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -51,12 +51,12 @@ repos:
     hooks:
       - id: isort
 
-  - repo: https://gitlab.com/pycqa/flake8
-    rev: 3.9.2
-    hooks:
-      - id: flake8
-        args: ['--config=setup.cfg']
-        additional_dependencies: [flake8-isort]
+#  - repo: https://gitlab.com/pycqa/flake8
+#    rev: 3.9.2
+#    hooks:
+#      - id: flake8
+#        args: ['--config=setup.cfg']
+#        additional_dependencies: [flake8-isort]
 
   - repo: https://github.com/pycqa/bandit
     rev: 1.7.0
