--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -57,7 +57,7 @@ jobs:
         name: coverage
         path: htmlcov
     - name: Upload coverage report to codecov
-      uses: codecov/codecov-action@v4
+      uses: codecov/codecov-action@v4-beta
       with:
         token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
         files: coverage.xml
